frontend/test/should_pass/basic_008.grg
rule r {
	pattern {
		x : Node;
	}
	modify {
	}
}

